# monitoring-platform

./: README.md  docker-compose.yml
agent/: Cargo.toml
agent/src/: main.rs
server/: requirements.txt
server/app/: main.py  schemas.py
server/app/db/: models.py  session.py
server/app/routers/: dashboard.py  ingest.py  metrics.py
server/app/templates/: dashboard.html
server/tests/: conftest.py  test_ingest.py  test_metrics.py
